--- a/index.html
+++ b/index.html
@@ -99,9 +99,14 @@
             .nav p {
                 align-self: flex-start;
             }
-            .maini img {
+            .maini .imge img {
                 height: 60vh;
                 width: 90vw;
+                align-self: center;
+                /* justify-content: center; */
+
+            }
+            .maini .img-container{
                 align-self: center;
             }
             .maini h2 {
